Changelog
---------

v5.5.0:
 ExerciseViewer changes:
  - Bugfix in the Timex PWX exercise parser (occurs e.g. on Timex Ironman GPS 
    T5K444 after installing a firmware update)

v5.4.0:
 SportsTracker changes:
  - switch to Java 7 compiler, so new language features can be used
    (so users also need Java 7 for SportsTracker execution)
  - use of new Java 7 language features (Project coin)
    - use of try-with-resources statements, fixes many error handling bugs
    - use of diamond operator for Gernerics type inference
    - use of multicatch for similar exceptions handling
    - use of new Objects class for hashcode computation
  - Exercise, Note and Weight dialog: dialogs can be closed with Escape key
    when the focus is on the date picker component (initial focus)
  - SF Feature Request 2927194: copy entries (exercises, notes, weights)
    - user can simply copy entries from the context or main menu, he only
      needs to enter the new date
  - All Exercise, Note and Weight actions (add, edit, copy):
    => select the edited entry in the current view when action is completed
       (bigger refactoring for automatic view updates after data changes)
  - Use of @Override annotation instead of {@inheritDoc} in all classes, 
    so implementation errors can be detected by the compiler
  - Refactoring in all Exericse/Notw/WeightListView: move the similar methods
    to BaseListView base class
  - Exercise / Note / Weight List View: context menu on right mouse click for 
    adding, editing, copying and deleting the selected table entry
  - Maven build: update to groovy-eclipse-compiler 2.5.2 which
    - adds support for Eclipse 3.7.1
    - adds support for Java 7
    - needs less custom configuration in pom.xml
  - added Windows icon for custom launcher configurations (st-logo.ico)
  - XMLStorageTest: cleanup of temporary files after test run
  - removed lots of compiler warnings (mostly for serialization issues) 
  - update of JFreeChart to version 1.0.14