@@ -72,7 +72,7 @@
         <dependency>
             <groupId>org.jdom</groupId>
             <artifactId>jdom</artifactId>
-            <version>1.1.3</version>
+            <version>2.0.1</version>
         </dependency>
         <dependency>
             <groupId>org.jdesktop.bsaf</groupId>
