@@ -4,8 +4,8 @@ import java.io.File;
 import java.text.SimpleDateFormat;
 import java.util.List;
 
-import org.jdom.Document;
-import org.jdom.Element;
+import org.jdom2.Document;
+import org.jdom2.Element;
 
 import de.saring.sportstracker.core.STException;
 import de.saring.sportstracker.core.STExceptionID;
@@ -41,7 +41,6 @@ public class XMLExerciseList {
      * @return the created ExerciseList
      * @throws STException thrown on read problems
      */
-    @SuppressWarnings("unchecked")
 	public ExerciseList readExerciseList (String source, SportTypeList sportTypeList) throws STException {
 
         try {            
