@@ -5,6 +5,9 @@ v5.5.0:
  ExerciseViewer changes:
   - Bugfix in the Timex PWX exercise parser (occurs e.g. on Timex Ironman GPS 
     T5K444 after installing a firmware update)
+  - update of JDOM library from version 1.1.3 to 2.0.1, (API changes)
+    - supports generics now, unchecked-warnings doesn't need to be suppressed 
+      anymore
 
 v5.4.0:
  SportsTracker changes:
